--- a/index.html
+++ b/index.html
@@ -1,14 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+        <title>Portafolio de desarrolladores — Soluciones web a medida</title>
+        <meta name="description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
+        <link rel="canonical" href="https://tusitio.example/">
+        <!-- Open Graph -->
+        <meta property="og:title" content="Portafolio de desarrolladores — Soluciones web a medida">
+        <meta property="og:description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://tusitio.example/">
+        <meta property="og:image" content="/images/preview.png">
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Portafolio de desarrolladores — Soluciones web a medida">
+        <meta name="twitter:description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida.">
+        <meta name="twitter:image" content="/images/preview.png">
+        <meta name="robots" content="index, follow">
+        <link rel="stylesheet" href="/css/style.css">
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Portafolio de desarrolladores",
+            "url": "https://tusitio.example/",
+            "logo": "https://tusitio.example/images/logo.png",
+            "contactPoint": [{
+                "@type": "ContactPoint",
+                "email": "contacto@ejemplo.com",
+                "contactType": "customer service"
+            }]
+        }
+        </script>
 </head>
 
 <body>
+    <!-- SVG sprite: symbols and gradients (hidden) -->
+    <svg aria-hidden="true" style="position:absolute;width:0;height:0;overflow:hidden;">
+        <defs>
+            <linearGradient id="grad-angular" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-1)" />
+                <stop offset="100%" stop-color="#ff9a7a" />
+            </linearGradient>
+            <linearGradient id="grad-sql" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-2)" />
+                <stop offset="100%" stop-color="#ff8ad0" />
+            </linearGradient>
+            <linearGradient id="grad-java" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-3)" />
+                <stop offset="100%" stop-color="#9b6ffb" />
+            </linearGradient>
+            <linearGradient id="grad-linux" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-4)" />
+                <stop offset="100%" stop-color="#38bdf8" />
+            </linearGradient>
+            <linearGradient id="grad-python" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-5)" />
+                <stop offset="100%" stop-color="#cbe86b" />
+            </linearGradient>
+            <linearGradient id="grad-hacking" x1="0" x2="1">
+                <stop offset="0%" stop-color="var(--accent-6)" />
+                <stop offset="100%" stop-color="#7c3aed" />
+            </linearGradient>
+        </defs>
+
+        <symbol id="icon-angular" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-angular)" />
+            <path d="M7 9 L12 6 L17 9 L15 17 H9 Z" fill="rgba(255,255,255,0.12)" />
+            <path d="M10.5 15h3l-1.5-4z" fill="#fff" />
+        </symbol>
+
+        <symbol id="icon-sql" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-sql)" />
+            <ellipse cx="12" cy="9" rx="6" ry="2" fill="rgba(255,255,255,0.18)" />
+            <ellipse cx="12" cy="12" rx="6" ry="2" fill="#fff" opacity="0.18" />
+            <ellipse cx="12" cy="15" rx="6" ry="2" fill="#fff" opacity="0.18" />
+            <path d="M6 9v6c0 1.1 2.7 2 6 2s6-.9 6-2V9" stroke="#fff" stroke-opacity="0.9" stroke-width="0.9" fill="none" />
+        </symbol>
+
+        <symbol id="icon-java" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-java)" />
+            <rect x="8" y="12" width="8" height="3" rx="1.2" fill="#fff" opacity="0.95" />
+            <path d="M9 11c0-1 2-2 3-2s3 1 3 2" stroke="#fff" stroke-width="0.8" fill="none" stroke-linecap="round" />
+            <path d="M9 9s1-1 3-1 3 1 3 1" stroke="#fff" stroke-width="0.6" fill="none" stroke-linecap="round" opacity="0.9" />
+        </symbol>
+
+        <symbol id="icon-linux" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-linux)" />
+            <rect x="6.5" y="7.5" width="11" height="9" rx="1.2" fill="#fff" opacity="0.12" />
+            <text x="10" y="13.5" fill="#fff" font-size="10" font-family="monospace">&gt;_</text>
+        </symbol>
+
+        <symbol id="icon-python" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-python)" />
+            <path d="M8 9c1-2 4-2 4-2s3 0 4 2v1H8V9z" fill="#fff" opacity="0.95" />
+            <circle cx="9.5" cy="9.5" r="0.6" fill="#0b1220" />
+            <circle cx="14.5" cy="9.5" r="0.6" fill="#0b1220" />
+        </symbol>
+
+        <symbol id="icon-hacking" viewBox="0 0 24 24">
+            <circle cx="12" cy="12" r="11" fill="url(#grad-hacking)" />
+            <path d="M12 6l4 2v3c0 3-3 5-4 6-1-1-4-3-4-6V8l4-2z" fill="rgba(255,255,255,0.12)" />
+            <text x="12" y="14" text-anchor="middle" font-size="10" fill="#fff">&lt;/&gt;</text>
+        </symbol>
+    </svg>
     <header>
         <h1> Portafolio de desarrolladores</h1>
         <nav class="menu-contenido">
@@ -28,12 +125,42 @@
         </section>
         <section class="">
             <div class="contenedor-tecnologias">
-                <div class="caja angular">Angular</div>
-                <div class="caja sql">Sql</div>
-                <div class="caja java">Java</div>
-                <div class="caja linux">Linux</div>
-                <div class="caja python">Python</div>
-                <div class="caja hacking">Hack</div>
+                <div class="caja angular">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-angular"></use></svg>
+                    <span class="caja-label">Angular
+                        <span class="subtitulo">Framework</span>
+                    </span>
+                </div>
+                <div class="caja sql">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-sql"></use></svg>
+                    <span class="caja-label">SQL
+                        <span class="subtitulo">Base de datos</span>
+                    </span>
+                </div>
+                <div class="caja java">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-java"></use></svg>
+                    <span class="caja-label">Java
+                        <span class="subtitulo">Backend</span>
+                    </span>
+                </div>
+                <div class="caja linux">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-linux"></use></svg>
+                    <span class="caja-label">Linux
+                        <span class="subtitulo">Sistemas</span>
+                    </span>
+                </div>
+                <div class="caja python">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-python"></use></svg>
+                    <span class="caja-label">Python
+                        <span class="subtitulo">Lenguaje</span>
+                    </span>
+                </div>
+                <div class="caja hacking">
+                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-hacking"></use></svg>
+                    <span class="caja-label">Hack
+                        <span class="subtitulo">Seguridad</span>
+                    </span>
+                </div>
             </div>
         </section>
 
