--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portafolio de desarrolladores — Soluciones web a medida</title>
-        <meta name="description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
-        <link rel="canonical" href="https://tusitio.example/">
-        <!-- Open Graph -->
-        <meta property="og:title" content="Portafolio de desarrolladores — Soluciones web a medida">
-        <meta property="og:description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://tusitio.example/">
-        <meta property="og:image" content="/images/preview.png">
-        <!-- Twitter -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Portafolio de desarrolladores — Soluciones web a medida">
-        <meta name="twitter:description" content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida.">
-        <meta name="twitter:image" content="/images/preview.png">
-        <meta name="robots" content="index, follow">
-        <link rel="stylesheet" href="/css/style.css">
-        <script type="application/ld+json">
+    <title>Portafolio de desarrolladores — Soluciones web a medida</title>
+    <meta name="description"
+        content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
+    <link rel="canonical" href="https://tusitio.example/">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Portafolio de desarrolladores — Soluciones web a medida">
+    <meta property="og:description"
+        content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida para empresas y proyectos personales. Contáctanos para desarrollar tu solución digital.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tusitio.example/">
+    <meta property="og:image" content="/images/preview.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Portafolio de desarrolladores — Soluciones web a medida">
+    <meta name="twitter:description"
+        content="Portafolio de desarrolladores web: creamos sitios y aplicaciones a medida.">
+    <meta name="twitter:image" content="/images/preview.png">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="/css/style.css">
+    <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "Organization",
@@ -77,14 +80,16 @@
             <ellipse cx="12" cy="9" rx="6" ry="2" fill="rgba(255,255,255,0.18)" />
             <ellipse cx="12" cy="12" rx="6" ry="2" fill="#fff" opacity="0.18" />
             <ellipse cx="12" cy="15" rx="6" ry="2" fill="#fff" opacity="0.18" />
-            <path d="M6 9v6c0 1.1 2.7 2 6 2s6-.9 6-2V9" stroke="#fff" stroke-opacity="0.9" stroke-width="0.9" fill="none" />
+            <path d="M6 9v6c0 1.1 2.7 2 6 2s6-.9 6-2V9" stroke="#fff" stroke-opacity="0.9" stroke-width="0.9"
+                fill="none" />
         </symbol>
 
         <symbol id="icon-java" viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="11" fill="url(#grad-java)" />
             <rect x="8" y="12" width="8" height="3" rx="1.2" fill="#fff" opacity="0.95" />
             <path d="M9 11c0-1 2-2 3-2s3 1 3 2" stroke="#fff" stroke-width="0.8" fill="none" stroke-linecap="round" />
-            <path d="M9 9s1-1 3-1 3 1 3 1" stroke="#fff" stroke-width="0.6" fill="none" stroke-linecap="round" opacity="0.9" />
+            <path d="M9 9s1-1 3-1 3 1 3 1" stroke="#fff" stroke-width="0.6" fill="none" stroke-linecap="round"
+                opacity="0.9" />
         </symbol>
 
         <symbol id="icon-linux" viewBox="0 0 24 24">
@@ -126,37 +131,49 @@
         <section class="">
             <div class="contenedor-tecnologias">
                 <div class="caja angular">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-angular"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-angular"></use>
+                    </svg>
                     <span class="caja-label">Angular
                         <span class="subtitulo">Framework</span>
                     </span>
                 </div>
                 <div class="caja sql">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-sql"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-sql"></use>
+                    </svg>
                     <span class="caja-label">SQL
                         <span class="subtitulo">Base de datos</span>
                     </span>
                 </div>
                 <div class="caja java">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-java"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-java"></use>
+                    </svg>
                     <span class="caja-label">Java
                         <span class="subtitulo">Backend</span>
                     </span>
                 </div>
                 <div class="caja linux">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-linux"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-linux"></use>
+                    </svg>
                     <span class="caja-label">Linux
                         <span class="subtitulo">Sistemas</span>
                     </span>
                 </div>
                 <div class="caja python">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-python"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-python"></use>
+                    </svg>
                     <span class="caja-label">Python
                         <span class="subtitulo">Lenguaje</span>
                     </span>
                 </div>
                 <div class="caja hacking">
-                    <svg class="caja-icon" role="img" aria-hidden="true"><use href="#icon-hacking"></use></svg>
+                    <svg class="caja-icon" role="img" aria-hidden="true">
+                        <use href="#icon-hacking"></use>
+                    </svg>
                     <span class="caja-label">Hack
                         <span class="subtitulo">Seguridad</span>
                     </span>
